compiler/tests-spec/testData/psi/linked/expressions/constant-literals/the-types-for-integer-literals/p-1/neg/1.3.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, the-types-for-integer-literals -> paragraph 1 -> sentence 1
 * NUMBER: 3
 * DESCRIPTION: Various integer literals with underscores after a long literal mark.
 */

konst konstue = 1000l___
konst konstue = 90L_
konst konstue = 0xFL_
konst konstue = 0X0Al_
konst konstue = 0b1L_
konst konstue = 0B101001L_
